# opennofeedback-ce

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.ps1
docs/: architecture.md  dsp_design.md
resources/images/: .gitkeep
src/common/: CircularBuffer.h  Parameters.h  RealtimeUtils.h
src/dsp/: AdaptiveNotchBank.cpp  AdaptiveNotchBank.h  ArtifactGuard.cpp  ArtifactGuard.h  Biquad.cpp  Biquad.h  DereverbTailSuppressor.cpp  DereverbTailSuppressor.h  EnvelopeFollower.cpp  EnvelopeFollower.h  FeedbackDetector.cpp  FeedbackDetector.h  NoiseEstimator.cpp  NoiseEstimator.h  Processor.cpp  Processor.h  SmoothedValue.h
src/ml/: FeatureExtractor.cpp  FeatureExtractor.h  ModelWeightsStub.h  TinyModelStub.cpp  TinyModelStub.h
src/plugin/: CMakeLists.txt  OpenDeFeedback.cpp  OpenDeFeedback.h  OpenDeFeedback_Controls.cpp  OpenDeFeedback_Controls.h  OpenDeFeedback_UI.cpp  config.h
src/plugin/resources/: OpenDeFeedback.rc
src/themes/: Default.json
src/ui/: Theme.cpp  Theme.h
tools/: generate_theme_header.py
training/: README.md  export_model_stub.py  generate_synthetic_feedback.py  train_feedback_stub.py
